# TaskFlow

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routers/: projects.py  tasks.py  users.py
app/core/: config.py  db.py  logging.py  security.py
app/crud/: user.py
app/models/: base.py  project.py  task.py  user.py
app/schemas/: project.py  task.py  user.py
app/services/: user_service.py
app/tasks/: notifications.py  periodic.py
app/tests/: test_auth.py  test_projects.py  test_tasks.py  test_users.py
app/utils/: email.py  metrics.py
migrations/: env.py
migrations/versions/: 0c39fcff666b_timezone_edited.py  88dfb38cbb43_initial_migration.py  bff34a878d52_initial_migration.py
